DT-1137 fix for blog post image wrap feature background image position

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1256,7 +1256,7 @@ footer.bk-footer .widget.profile .bk-profile-socialicons span a {
 }
 
 .blog-post-feature-image-wrap {  /* Blog post feature image */
-    background-position: -1000%;
+    background-position: -9999%;
     line-height: 0;
     img { max-height: 400px ; }
 }
